# currency_app

./: README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/versions/: 0001_create_orders_table.py
currency_app/: db.py  settings.py
currency_app/api/: deps.py  main.py  utils.py
currency_app/clients/: nbp_client.py
currency_app/models/: order.py
currency_app/schemas/: order.py
tests/: conftest.py  rates.json  test_currency_api.py
