[tool.poetry]
name = "currency-app"
version = "0.1.0"
description = ""
authors = ["Kacper Misiek <315560@uwr.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
SQLAlchemy = "^2.0.36"
pydantic-settings = "^2.6.1"
psycopg2 = "^2.9.10"
alembic = "^1.13.3"
furl = "^2.1.3"



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"


[tool.pytest.ini_options]
addopts = "-p no:warnings"
env = [
    "database_dsn = postgresql://alice:xyz@localhost:5432/currency_app",
]